# codex

./: pnpm-lock.yaml  pnpm-workspace.yaml
c2afast/: app.py  auth.py  pyproject.toml  translate.py
c2afast/tests/: test_app.py
c2aproxy/: api-comparison.md  package.json  tsconfig.json
c2aproxy/src/: app.ts  auth.ts  index.ts  translate.ts
c2aproxy/test/: app.test.ts
codex-rs/: Cargo.toml  authSchema.md
codex-rs/anthropic/: Cargo.toml
codex-rs/anthropic/src/: main.rs
