[package]
name = "codex-anthropic"
edition = "2024"
version = { workspace = true }

[[bin]]
name = "anthropic-server"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
axum = { version = "0.7", features = ["macros"] }
codex-core = { path = "../core" }
codex-protocol = { path = "../protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
pretty_assertions = "1"
tower = "0.5"
